[package]
name = "blocky-auth"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Jaden Buchan <me@jaden.bio>"]
repository = "https://github.com/blocky-rs/blocky"
readme = "../README.md"
keywords = ["minecraft"]
categories = ["games"]
description = """
A Rust library for creating Minecraft clients,
enabling packet manipulation and automated
interactions with Minecraft servers.
"""

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json"] }
sha1 = "0.10.6"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
