[package]
name = "blocky-nbt"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Jaden Buchan <me@jaden.bio>"]
repository = "https://github.com/blocky-rs/blocky"
readme = "../README.md"
keywords = ["minecraft"]
categories = ["games"]
description = """
A Rust library for creating Minecraft clients,
enabling packet manipulation and automated
interactions with Minecraft servers.
"""

[dependencies]
anyhow = "1.0"
indexmap = { version = "2.5", optional = true }

[features]
default = ["preserve_order"]
preserve_order = ["dep:indexmap"]
